เพิ่มไฟล์ชุดสุดท้าย
 Changes to be committed:
	modified:   ROOT/WebContent/base.html
	modified:   ROOT/WebContent/bootstrap-3.2.0-dist/js/controller.js
	modified:   ROOT/WebContent/bootstrap-3.2.0-dist/js/factory.js
	modified:   ROOT/WebContent/collettion/intro.html
	modified:   ROOT/WebContent/collettion/signup1.html
	modified:   ROOT/WebContent/incomeoutlay.html

--- a/ROOT/WebContent/collettion/intro.html
+++ b/ROOT/WebContent/collettion/intro.html
@@ -35,7 +35,7 @@
 <div class="row position-div">
 	<div class="col-md-7">
 		<div class="container">
-			<h1>Money Movement</h1>
+<!-- 			<h1>Money Movement</h1> -->
 		</div>
 	</div>
 	<div class=" col-md-5">
@@ -64,6 +64,7 @@
 					<input type="password"
 						class="form-control" id="Password" ng-model="users.password"
 						placeholder="Password" required ng-minlength='8'>
+						<p class="help-block">want characters up to 8</p>
 				</div>
 				<div class="form-group">
 					<input
